fix minor bug and add more test